--- a/src/css/stylesheet.css
+++ b/src/css/stylesheet.css
@@ -81,7 +81,7 @@ body {
     }
 }
 
-@media(min-height:670px){
+@media(min-height:670px) and (max-height:990px) {
     #panelLogin{
         background-size: 160%;
         background-position: 30% 0px;
