--- a/src/css/stylesheet.css
+++ b/src/css/stylesheet.css
@@ -37,6 +37,47 @@ body {
     text-shadow: 1px 2px 4px rgba(185, 179, 179, 0.75);
 }
 
+/* Estilos del registro */
+
+#panelRegistro {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-image: url(../img/chica_horizonte.jpg);
+    background-size: 100%;
+    background-position: 30% 0%;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+#panelRegistro img {
+    width: 30%;
+}
+
+#cajaBlanca2 {
+    /*     width: 30%; */
+    background-color: rgba(255, 255, 255, 0.8);
+    height: fit-content;
+    padding: 40px 0px;
+    border-radius: 20px;
+}
+
+#panelRegistro label {
+    font-family: 'Varela Round';
+    font-size: 23px;
+    line-height: 28px;
+    color: rgba(64, 52, 52, 0.61);
+    text-shadow: 1px 2px 4px rgba(185, 179, 179, 0.75);
+}
+
+#panelRegistro input{
+    height: 2rem;
+}
+
+#panelRegistro button{
+    height: 40px;
+    width: 28%;
+}
 
 /* Media querys */
 @media(max-width:600px) {
